WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
304990
CRASH in AudioVideoRendererAVFObjC::requestMediaDataWhenReady()
https://bugs.webkit.org/show_bug.cgi?id=304990
Summary
CRASH in AudioVideoRendererAVFObjC::requestMediaDataWhenReady()
Jer Noble
Reported
2026-01-06 09:34:47 PST
CRASH in AudioVideoRendererAVFObjC::requestMediaDataWhenReady()
Attachments
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2026-01-06 09:34:48 PST
<
rdar://problem/165519880
>
Jer Noble
Comment 2
2026-01-06 09:38:13 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56142
EWS
Comment 3
2026-01-06 13:35:51 PST
Committed
305174@main
(71e4dc95a917): <
https://commits.webkit.org/305174@main
> Reviewed commits have been landed. Closing PR #56142 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug