CRASH in AudioVideoRendererAVFObjC::requestMediaDataWhenReady() rdar://165519880 https://bugs.webkit.org/show_bug.cgi?id=304990

Reviewed by Eric Carlson.

303486@main exposed a pre-existing issue, where a client of VideoMediaSampleRenderer
which called stopRequestingMediaData() from callback would have its lambda destroyed
while that lambda was still executing. To protect against this kind of re-entrancy,
clear the m_readyForMoreMediaDataFunction ivar from stopRequestingMediaData(), but
only destroy the function itself during the next run-loop.

* Source/WebCore/platform/graphics/cocoa/VideoMediaSampleRenderer.mm:
(WebCore::VideoMediaSampleRenderer::stopRequestingMediaData):

Canonical link: https://commits.webkit.org/305174@main